--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -17,7 +17,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: web
+        working-directory: apps/frontend
 
     steps:
       - name: Checkout code
